# StackChan-dazo

firmware/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
firmware/components/esp-now/: CMakeLists.txt
firmware/components/esp-now/src/security/src/: espnow_security.c
firmware/components/esp-now/src/utils/src/: espnow_mem.c
firmware/components/jp_font/: CMakeLists.txt
firmware/docs/: camera-notes.md  music-beat-reactive.md
firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
firmware/main/agent_runtime/: agent_runtime.h  gpt_agent_runtime.cpp  gpt_agent_runtime.h  grok_agent_runtime.cpp  grok_agent_runtime.h  xiaozhi_agent_runtime.cpp  xiaozhi_agent_runtime.h
firmware/main/apps/app_ai_agent/: app_ai_agent.cpp
firmware/main/apps/app_setup/: app_setup.cpp
firmware/main/apps/app_setup/workers/: ai_agent.cpp  workers.h
firmware/main/compat/: newlib_ctype_compat.c
firmware/main/hal/: hal.cpp  hal.h  hal_io_expander.cpp  hal_mcp.cpp  hal_servo.cpp  hal_ws_avatar.cpp
firmware/main/hal/board/: hal_bridge.cc  hal_bridge.h  stackchan_camera.cc  stackchan_camera.h  stackchan_display.cc  stackchan_display.h
firmware/main/hal/drivers/bmi270/: bmi270.cpp
firmware/main/hal/utils/ota/: ota.c
firmware/main/stackchan/avatar/avatar/: avatar.h
firmware/main/stackchan/modifiers/: idle_motion.h
firmware/tools/: camraw.py  spec_viewer.py
firmware/xiaozhi-esp32/main/: application.cc  application.h  assets.cc  mcp_server.cc  mcp_server.h
firmware/xiaozhi-esp32/main/audio/: audio_service.cc  audio_service.h
firmware/xiaozhi-esp32/main/audio/codecs/: no_audio_codec.cc
firmware/xiaozhi-esp32/main/boards/common/: camera.h  (+2 more)
firmware/xiaozhi-esp32/main/display/: display.h
firmware/xiaozhi-esp32/main/protocols/: gpt_realtime_protocol.cc  gpt_realtime_protocol.h  mqtt_protocol.cc  mqtt_protocol.h  protocol.h
(+6 files in other folders)
